--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -71,17 +71,20 @@
       display: flex;
       justify-content: start;
       button {
-        background-color: black;
-        padding: 9px 23px;
+        background-color: #000;
+        padding: 10px 30px;
         font-family: "Passion One", cursive;
         text-transform: uppercase;
         font-size: 18px;
-        border-radius: 15%;
+        border-radius: 10px;
         color: white;
-        border: none;
+        border: 1px solid #000;
 
         &:hover {
           cursor: pointer;
+          background-color: #fff;
+          color: #000;
+          transition: 0.5s all;
         }
       }
       span {
