--- a/src/sass/_ingredients.scss
+++ b/src/sass/_ingredients.scss
@@ -90,7 +90,7 @@
       outline: none;
 
       &:hover {
-        transition: ease-in-out 0.4s;
+        transition: 0.5s all;
         color: black;
         background-color: white;
         border: 1px solid black;
