--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -46,6 +46,7 @@
             color: #00a950;
             background-color: white;
             border: 1px solid #00a950;
+            transition: 0.5s all;
           }
         }
       }
@@ -96,6 +97,7 @@
             color: #ff8e27;
             background-color: white;
             border: 1px solid #ff8e27;
+            transition: 0.5s all;
           }
         }
       }
@@ -108,7 +110,6 @@
       background-color: #a1cf67;
       display: flex;
       align-items: center;
-      // justify-content: center;
       padding: 20px 0px 20px 40px;
       color: white;
       .content {
@@ -146,6 +147,7 @@
             color: #a1cf67;
             background-color: white;
             border: 1px solid #a1cf67;
+            transition: 0.5s all;
           }
         }
       }
@@ -198,6 +200,7 @@
             color: #245dcb;
             background-color: white;
             border: 1px solid #245dcb;
+            transition: 0.5s all;
           }
         }
       }
@@ -243,6 +246,7 @@
             color: #cd266d;
             background-color: white;
             border: 1px solid #cd266d;
+            transition: 0.5s all;
           }
         }
       }
@@ -264,23 +268,27 @@
       h2 {
         display: flex;
         flex-direction: column;
-        font-size: 2.8em;
+        font-size: 50px;
         font-family: "Passion One", cursive;
         text-transform: uppercase;
-        line-height: 0.8em;
+        line-height: 40px;
       }
       button {
-        color: white;
+        color: #fff;
         font-family: "Passion One", cursive;
         background-color: #ff8e27;
-        border: none;
+        border: 1px solid #ff8e27;
         font-weight: bold;
         padding: 6px 8px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         border-radius: 40px;
-        margin-top: 3em;
+        margin-top: 10px;
+
+        &:hover {
+          background-color: #fff;
+          color: #ff8e27;
+          border: 1px solid #ff8e27;
+          transition: 0.5s all;
+        }
       }
     }
   }
