--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,43 +1,75 @@
 nav {
   display: flex;
+  position: fixed;
   justify-content: space-around;
   align-items: center;
-  min-height: 12vh;
+  padding: 10px;
+  width: 100%;
+  z-index: 999;
+  border-bottom: 2px solid #9a2522;
+
   font-family: "Passion One", cursive;
   background-color: #ffbe3b;
 
   .logo {
     img {
-      width: 8em;
+      width: 180px;
     }
   }
 
   .nav-links {
     display: flex;
     justify-content: space-around;
-    width: 60%;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 950px;
+    height: 80px;
     text-transform: uppercase;
 
-    a {
-      color: black;
-      text-decoration: none;
-      letter-spacing: 1px;
-      font-size: 15px;
-    }
+    li {
+      overflow-x: initial;
+      a {
+        color: #9a2522;
+        padding: 8px;
+        text-decoration: none;
+        letter-spacing: 1.5px;
+        font-size: 18px;
+        overflow-x: inherit;
+        border: 1px solid transparent;
+        border-radius: 10px;
 
-    .menu {
-      background-color: green;
-      padding: 8px 35px;
-      border-radius: 8px;
-      color: white;
+        &:hover {
+          border: 1px solid #ffbe3b;
+          background-color: #9a2522;
+          color: #ffbe3b;
+          border-radius: 10px;
+          transition: 0.5s all;
+        }
+      }
+      .menu {
+        display: flex;
+        padding: 8px 35px;
 
-      .menu-logo {
-        vertical-align: middle;
+        border-radius: 10px;
+        background-color: transparent;
+        color: #9a2522;
+        border: 1px solid #9a2522;
+
+        &:hover {
+          background-color: #9a2522;
+          color: #ffbe3b;
+          transition: 0.5s all;
+        }
+
+        .menu-logo {
+          margin-left: 4px;
+        }
       }
     }
   }
   .burger {
     display: none;
+    position: relative;
     cursor: pointer;
 
     div {
@@ -59,28 +91,25 @@ nav {
 }
 
 @media screen and (max-width: 812px) {
-  body {
-    overflow-x: hidden;
-  }
   nav {
     background-color: #ffbe3b;
 
-    .logo {
-      margin-left: 33%;
-      margin-right: auto;
-    }
     .nav-links {
-      position: absolute;
-      background-color: #ffbe3b;
-      right: 0px;
-      height: 92vh;
-      top: 12vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 60%;
+
+      position: fixed;
+      right: 0px;
+      top: 116.22px;
+      overflow-x: hidden;
+      height: calc(100vh - 110.22px);
+      width: 100%;
+
+      background-color: #ffbe3b;
       transform: translateX(100%);
       transition: transform 0.5s ease-in;
+      // border-top: 2px solid #9a2522;
 
       li {
         opacity: 0;
@@ -91,7 +120,8 @@ nav {
     }
     .burger {
       display: block;
-      margin-right: 2em;
+      position: absolute;
+      right: 25px;
     }
 
     .toggle .line1 {
