--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -1,7 +1,9 @@
 .home-content {
   display: flex;
-  height: 650px;
+  height: 750px;
   justify-content: center;
+  position: relative;
+  top: 50px;
 
   .home-info {
     display: flex;
@@ -182,7 +184,8 @@
     align-items: center;
     width: 85%;
     margin: 2.5em auto;
-    height: auto;
+    top: 60px;
+    height: 900px;
     .home-info {
       width: auto;
       padding-bottom: 15px;
