--- a/src/sass/_burger-menu.scss
+++ b/src/sass/_burger-menu.scss
@@ -1,54 +1,52 @@
 #burger-menu {
   font-family: sans-serif;
-  h1 {
-    display: flex;
-    justify-content: center;
-    padding: 30px 0px;
-  }
 
   .all-burgers {
-    // border: 1px solid green;
-    padding: 10px;
-
     display: flex;
+    justify-content: space-between;
+
     flex-wrap: wrap;
-    justify-content: space-around;
+    padding: 80px 0;
+
     .burger-card {
+      max-width: 350px;
+      background-color: #fff;
+      border-radius: 10px;
+      margin-bottom: 45px;
       -webkit-box-shadow: 3px 3px 12px -2px rgba(0, 0, 0, 0.66);
       -moz-box-shadow: 3px 3px 12px -2px rgba(0, 0, 0, 0.66);
       box-shadow: 3px 3px 12px -2px rgba(0, 0, 0, 0.66);
-      width: 350px;
-      border-radius: 10px;
-      background-color: #fff;
-      margin: 10px;
 
       img {
-        width: 350px;
+        max-width: 100%;
+        display: block;
       }
       .burger-info {
-        display: flex;
-        flex-direction: column;
-        // border: 1px solid green;
-        p {
-          // border: 1px solid red;
-          padding-top: 10px;
-        }
-        padding: 5px;
-        width: 96%;
-        margin-left: auto;
-        margin-right: auto;
+        padding: 10px;
+
+        height: 120px;
         border-bottom: 1px solid gray;
-        height: 100px;
+        h4 {
+          text-transform: uppercase;
+          color: #353b48;
+          padding: 8px 0;
+          font-size: 18px;
+        }
+        p {
+          opacity: 0.5;
+        }
       }
       .burger-order {
-        padding: 6px 10px;
+        padding: 8px 12px;
         display: flex;
         justify-content: space-between;
 
         span {
-          &:nth-child(2) {
-            color: #f39c12;
-          }
+          font-weight: bold;
+        }
+        .btn-order {
+          color: #eccc68;
+          cursor: pointer;
         }
       }
     }
@@ -58,16 +56,12 @@
 @media only screen and (max-width: 800px) {
   #burger-menu {
     .all-burgers {
+      justify-content: center;
       .burger-card {
-        margin-bottom: 15px;
-        .burger-picture {
-          img {
-            width: 300px;
-          }
-        }
+        margin-bottom: 36px;
 
         .burger-info {
-          height: 150px;
+          height: auto;
         }
       }
     }
