--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -33,8 +33,8 @@ nav {
   }
 
   .hide-logo {
-    display: none;
-    transition: all 1.9s ease;
+    opacity: 0;
+    transition: all 0.6s ease;
   }
   ul {
     display: flex;
