--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -31,7 +31,7 @@
       display: flex;
       z-index: -999;
       font-size: 22px;
-      justify-content: start;
+      justify-content: flex-start;
       padding-bottom: 10px;
       .not-spicy {
         opacity: 0.4;
@@ -71,7 +71,7 @@
     }
     .home-order {
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       button {
         background-color: #000;
         padding: 10px 30px;
