--- a/src/sass/_menu-page.scss
+++ b/src/sass/_menu-page.scss
@@ -17,6 +17,29 @@
       font-size: 16px;
     }
   }
+
+  .download-pdf {
+    margin-top: 22px;
+    display: flex;
+    justify-content: center;
+    button {
+      padding: 12px 14px;
+      text-transform: uppercase;
+      font-family: "Passion One", cursive;
+      font-size: 18px;
+      background-color: #9a2522;
+      color: #fff;
+      letter-spacing: 1px;
+      border-radius: 6px;
+      outline: none;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #000;
+        transition: 0.5s all;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 800px) {
