--- a/src/sass/_contact-page.scss
+++ b/src/sass/_contact-page.scss
@@ -1,101 +1,40 @@
-#contact {
+.newsletter {
   display: flex;
-  justify-content: center;
-  font-family: sans-serif;
-  background-color: #ecf0f1;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
-  .contact-info {
-    width: 700px;
-    margin-right: 18px;
-    .info {
-      padding: 10px 28px 10px 36px;
-      span {
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 12px;
-        padding-left: 4px;
-      }
-      h3 {
-        padding: 10px 0 10px 0;
-        text-transform: uppercase;
-        font-size: 46px;
-      }
-      p {
-        padding: 10px 0px;
-      }
-    }
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  background-color: #9a2522;
 
-    .form {
-      display: flex;
-      padding: 15px;
-      flex-direction: column;
+  h4 {
+    padding: 30px 0;
+    text-transform: uppercase;
+    font-size: 36px;
+  }
 
-      form {
-        .field {
-          margin: 30px 0;
-          label {
-            display: block;
-            padding: 0 30px;
-          }
-          // span here
-          .input-border {
-            padding: 1px;
-            position: relative;
+  button {
+    padding: 18px 56px;
+    text-transform: uppercase;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 16px;
+    border: 2px solid #fff;
+    color: #9a2522;
+    outline: none;
+    cursor: pointer;
 
-            .field-box {
-              width: 100%;
-              font-size: 20px;
-              outline: 0;
-              border: 1px solid grey;
-              border-radius: 4px;
-              resize: none;
-              height: 42px;
-            }
-            .area {
-              height: 106px;
-            }
-          }
-          button {
-            background-color: #000;
-            padding: 14px 36px;
-            font-family: "Passion One", cursive;
-            text-transform: uppercase;
-            font-size: 18px;
-            border-radius: 10px;
-            color: white;
-            border: 1px solid #000;
-            margin-left: 30px;
-
-            &:hover {
-              cursor: pointer;
-              background-color: #fff;
-              color: #000;
-              transition: 0.5s all;
-            }
-          }
-        }
-      }
+    &:hover {
+      background-color: transparent;
+      border: 2px solid #fff;
+      color: #fff;
+      transition: 0.5s all;
     }
   }
-  .contact-resume {
-    width: 300px;
-    .info-adress {
-      padding: 22px 12px;
 
-      p {
-        font-weight: lighter;
-        padding-bottom: 15px;
-        &:nth-child(1) {
-          text-transform: uppercase;
-          font-weight: bold;
-        }
-      }
-    }
-    .info-card {
-      img {
-        padding: 80px 0 0 10px;
-        width: 280px;
-      }
-    }
+  p {
+    padding: 25px 0;
+    text-transform: capitalize;
   }
 }
