--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,8 +1,9 @@
 #contact {
   display: flex;
   justify-content: center;
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #ecf0f1;
+  padding: 50px 80px;
 
   .contact-info {
     width: 700px;
@@ -16,11 +17,13 @@
         padding-left: 4px;
       }
       h3 {
-        padding: 10px 0 10px 0;
+        padding: 10px 0;
         text-transform: uppercase;
         font-size: 46px;
+        color: #9a2522;
       }
       p {
+        opacity: 0.8;
         padding: 10px 0px;
       }
     }
@@ -29,6 +32,11 @@
       display: flex;
       padding: 15px;
       flex-direction: column;
+
+      .submit-btn {
+        display: flex;
+        justify-content: center;
+      }
 
       form {
         .field {
@@ -64,7 +72,7 @@
             border-radius: 10px;
             color: white;
             border: 1px solid #000;
-            margin-left: 30px;
+            // margin-left: 30px;
 
             &:hover {
               cursor: pointer;
@@ -95,6 +103,47 @@
       img {
         padding: 80px 0 0 10px;
         width: 280px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #contact {
+    flex-direction: column;
+    padding: 30px 12px;
+
+    .contact-info {
+      width: initial;
+      margin-right: 0;
+      .info {
+        span {
+          padding-left: 0;
+          font-size: 12px;
+        }
+        h3 {
+          font-size: 42px;
+          padding: initial;
+        }
+        p {
+          padding: 16px 0;
+        }
+      }
+      .submit-btn {
+        display: flex;
+        justify-content: center;
+      }
+    }
+    .contact-resume {
+      width: 100%;
+      .info-adress {
+        text-align: center;
+      }
+      .info-card {
+        padding: 8px;
+        img {
+          width: 100%;
+        }
       }
     }
   }
