--- a/src/sass/_review.scss
+++ b/src/sass/_review.scss
@@ -27,13 +27,13 @@
       margin-bottom: 32px;
       background-color: #fff;
       height: auto;
-      padding: 15px;
+      padding: 18px;
       border-bottom: 3px solid #9a2522;
       border-radius: 6px;
       font-family: "Poppins", sans-serif;
 
       blockquote {
-        font-weight: bold;
+        font-size: 22px;
         &::before {
           content: open-quote;
         }
@@ -49,7 +49,21 @@
         display: block;
         color: #9a2522;
         font-weight: bold;
+        font-size: 20px;
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #review {
+    padding: 0 24px;
+    margin-top: 106px;
+    .review-title {
+      padding-top: 46px;
+    }
+    .review-content {
+      padding: 20px;
     }
   }
 }
