--- a/src/sass/_review.scss
+++ b/src/sass/_review.scss
@@ -1,11 +1,13 @@
 #review {
-  padding: 0 190px;
+  // padding: 0 190px;
   margin-top: 116px;
 
-  font-family: sans-serif;
-  background-color: #ecf0f1;
+  font-family: "Poppins", sans-serif;
 
-  .review-title {
+  background-color: #ecf0f1;
+  border-bottom: 2px solid #9a2522;
+
+  .review-header {
     padding: 42px 0 30px 0;
     display: flex;
     flex-direction: column;
@@ -19,21 +21,30 @@
     }
   }
   .review-content {
-    justify-items: center;
-    padding: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 60px 140px;
+    font-family: "Poppins", sans-serif;
 
-    .review-card {
+    .review {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
       box-shadow: 3px 4px 5px 0px rgba(163, 160, 163, 1);
-      margin-bottom: 32px;
+      margin-bottom: 28px;
       background-color: #fff;
-      height: auto;
+
       padding: 18px;
       border-bottom: 3px solid #9a2522;
       border-radius: 6px;
-      font-family: "Poppins", sans-serif;
+      font-size: 16px;
+
+      width: 480px;
 
       blockquote {
-        font-size: 22px;
+        margin-bottom: 6px;
         &::before {
           content: open-quote;
         }
@@ -49,7 +60,6 @@
         display: block;
         color: #9a2522;
         font-weight: bold;
-        font-size: 20px;
       }
     }
   }
@@ -57,13 +67,18 @@
 
 @media only screen and (max-width: 800px) {
   #review {
-    padding: 0 24px;
+    // padding: 0 24px;
     margin-top: 106px;
-    .review-title {
-      padding-top: 46px;
+    .review-header {
+      padding: 46px 0;
     }
     .review-content {
-      padding: 20px;
+      padding: 12px 32px;
+      .review {
+        span {
+          padding: initial;
+        }
+      }
     }
   }
 }
