--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,12 +5,11 @@ nav {
   align-items: center;
   padding: 10px 44px;
   font-size: 18px;
+  font-weight: bold;
   text-transform: uppercase;
-  // letter-spacing: 1.5px;
   z-index: 99; // not very good
 
   width: 100%;
-  // font-family: "Passion One", cursive;
   font-family: "Poppins", sans-serif;
 
   background-color: #eccc68;
@@ -78,13 +77,14 @@ nav {
       .menu {
         justify-content: flex-start;
         display: flex;
+        align-items: center;
         padding: 8px 35px;
         border: 2px solid #9a2522;
         border-radius: 10px;
         background-color: #9a2522;
         color: #f1c40f;
         span {
-          margin-right: 4px;
+          margin-right: 8px;
         }
       }
     }
