--- a/src/sass/_location-page.scss
+++ b/src/sass/_location-page.scss
@@ -5,8 +5,6 @@
   font-family: sans-serif;
   background-color: #ecf0f1;
 
-  // padding: 115px 0px;
-
   border-bottom: 2px solid #9a2522;
   .hero-container {
     display: inline-block;
@@ -33,21 +31,20 @@
   }
   .location-container {
     align-self: center;
-    padding: 60px 0;
+    padding: 70px 0;
     width: 550px;
 
     .location-resume {
       text-align: center;
+      text-transform: uppercase;
       h2 {
-        text-transform: uppercase;
-        // font-family: "Passion One", cursive;
         font-family: "Poppins", sans-serif;
-        padding: 30px 6px;
+        padding: 28px 6px;
         color: #9a2522;
         font-size: 52px;
       }
       .location-information {
-        padding: 15px 0;
+        padding: 28px 0;
         display: flex;
         flex-direction: column;
         span {
@@ -59,19 +56,20 @@
       .location-text {
         p {
           &:nth-child(1) {
-            padding: 10px;
-          }
-          &:nth-child(2) {
             text-transform: uppercase;
             font-weight: bold;
             padding: 20px 0;
           }
-          &:nth-child(3) {
-            padding: 16px 30px;
+          &:nth-child(2) {
+            padding: 22px 30px;
+            text-transform: initial;
             span {
               font-weight: bold;
               color: #9a2522;
             }
+          }
+          &:nth-child(3) {
+            text-transform: initial;
           }
         }
       }
