--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -3,6 +3,20 @@
     cursor: pointer;
     outline: none;
   }
+
+  .button-menu {
+    font-family: "Passion One", cursive;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    padding: 9px 18px;
+    text-decoration: none;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+    width: 150px;
+    align-self: center;
+    border-radius: 12px;
+  }
   .first-menu-section {
     display: grid;
     grid-template-columns: 30% 40% 30%;
@@ -20,6 +34,15 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        .button-menu {
+          &:hover {
+            color: #00a950;
+            background-color: white;
+            border: 1px solid #00a950;
+            transition: 0.5s all;
+          }
+        }
         h2 {
           display: flex;
           flex-direction: column;
@@ -31,17 +54,7 @@
           font-size: 0.65em;
           font-family: "Poppins", sans-serif;
         }
-        button {
-          font-family: "Passion One", cursive;
-          font-size: 1.1em;
-          text-transform: uppercase;
-          padding: 9px 18px;
-          color: white;
-          background-color: transparent;
-          border: 1px solid white;
-          width: 150px;
-          align-self: center;
-          border-radius: 12px;
+        .button-menu {
           &:hover {
             color: #00a950;
             background-color: white;
@@ -81,18 +94,7 @@
           font-size: 0.65em;
           font-family: "Poppins", sans-serif;
         }
-        button {
-          font-family: "Passion One", cursive;
-          font-size: 1.1em;
-          text-transform: uppercase;
-          padding: 9px 18px;
-          color: white;
-          background-color: transparent;
-          width: 150px;
-          align-self: center;
-          border: 1px solid white;
-          border-radius: 12px;
-
+        .button-menu {
           &:hover {
             color: #ff8e27;
             background-color: white;
@@ -131,18 +133,7 @@
           font-size: 0.65em;
           font-family: "Poppins", sans-serif;
         }
-        button {
-          font-family: "Passion One", cursive;
-          font-size: 1.1em;
-          text-transform: uppercase;
-          padding: 9px 18px;
-          width: 150px;
-          align-self: center;
-          color: white;
-          background-color: transparent;
-          border: 1px solid white;
-          border-radius: 12px;
-
+        .button-menu {
           &:hover {
             color: #a1cf67;
             background-color: white;
@@ -184,18 +175,7 @@
           font-size: 0.65em;
           font-family: "Poppins", sans-serif;
         }
-        button {
-          font-family: "Passion One", cursive;
-          font-size: 1.1em;
-          text-transform: uppercase;
-          padding: 9px 18px;
-          color: white;
-          width: 150px;
-          align-self: center;
-          background-color: transparent;
-          border: 1px solid white;
-          border-radius: 12px;
-
+        .button-menu {
           &:hover {
             color: #245dcb;
             background-color: white;
@@ -230,18 +210,7 @@
           font-size: 0.65em;
           font-family: "Poppins", sans-serif;
         }
-        button {
-          font-family: "Passion One", cursive;
-          font-size: 1.1em;
-          text-transform: uppercase;
-          width: 150px;
-          align-self: center;
-          padding: 9px 18px;
-          color: white;
-          background-color: transparent;
-          border: 1px solid white;
-          border-radius: 12px;
-
+        .button-menu {
           &:hover {
             color: #cd266d;
             background-color: white;
@@ -272,23 +241,6 @@
         font-family: "Passion One", cursive;
         text-transform: uppercase;
         line-height: 40px;
-      }
-      button {
-        color: #fff;
-        font-family: "Passion One", cursive;
-        background-color: #ff8e27;
-        border: 1px solid #ff8e27;
-        font-weight: bold;
-        padding: 6px 8px;
-        border-radius: 40px;
-        margin-top: 10px;
-
-        &:hover {
-          background-color: #fff;
-          color: #ff8e27;
-          border: 1px solid #ff8e27;
-          transition: 0.5s all;
-        }
       }
     }
   }
