--- a/src/sass/_review.scss
+++ b/src/sass/_review.scss
@@ -65,8 +65,9 @@
     }
   }
   .review-footer {
+    padding-top: 26px;
+    height: 148px;
     text-align: center;
-    height: 120px;
 
     h4 {
       font-size: 28px;
@@ -76,10 +77,12 @@
 
     a {
       text-decoration: none;
-      color: #9a2522;
+      color: #fff;
+      cursor: pointer;
       font-size: 18px;
       padding: 12px 16px;
       border: 2px solid #9a2522;
+      background-color: #9a2522;
       border-radius: 4px;
       font-weight: bold;
     }
@@ -100,6 +103,9 @@
           padding: initial;
         }
       }
+    }
+    .review-footer {
+      height: 192px;
     }
   }
 }
