--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -302,7 +302,7 @@
           p {
             font-size: 0.6em;
           }
-          button {
+          .button-menu {
             background-color: transparent;
             border: 1px solid white;
             width: 100px;
@@ -327,7 +327,7 @@
           p {
             font-size: 0.6em;
           }
-          button {
+          .button-menu {
             background-color: transparent;
             border: 1px solid white;
             width: 100px;
